<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.eda.administrador.seguro.MecanicaFragment">

    <TextView
        android:id="@+id/txtMecanica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mechanical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtUbicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtUbicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.55"
                android:ems="10" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtMotivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reason" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spiMotivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/reason" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtVehiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vehicle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <GridView
                android:id="@+id/gvVehiculo"
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txtComentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment" />

    <EditText
        android:id="@+id/edtComentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/txtFoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/picture" />

    <Button
        android:id="@+id/btnCamara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_layer_button"
        android:text="@string/camare"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_layer_button"
        android:text="@string/submit"
        android:textColor="@android:color/white" />

</LinearLayout>
